Sat May 10 21:09:07 2003  Stefan  <Streu@gmx.de>

	* pconfig.c (Read_HConfig_File): removed bogus 'fclose'

	* vgapdat2.c (PutShipFC, PutPlanetFCode): added proper 'const'
	qualifier

	* vgapdat1.c (ChangePlanetOwner): published this function

Wed May  7 21:16:58 2003  Stefan  <Streu@gmx.de>

	* auxdata.c (DefaultRemoteState): added functions to mess with
 	default remote status

Sat Apr 26 12:34:25 2003  Stefan  <Streu@gmx.de>

	* auxdata.c (WriteAuxVersionInfo): fixed another timestamp issue

Sun Mar 16 17:16:03 2003  Stefan  <Streu@gmx.de>

	* vgaputil.c: removed Borland #pragmas

	* auxdata.c, hostio.c: timestamp handling: finally got it right

	* config.hi4: added newest version from PHost

	* enum.c (ReinitWraparound): new; call this after loading
	configuration, for more robustness

	* hullfunc.c: forward compatibility mode added; don't bomb out
	on invalid files; read shiplist.txt.

	* pconfig.c: read shiplist.txt; accept tristatex options;
	accept "External" or "Allies" for boolean options

	* version.h: fixed typo (#ifdef instead of #ifndef, d'ooh!)

	* vgapdat2.c: use more robust method to determine size of
	ship.hst-to-be

Wed Mar 12 09:14:19 2003  Stefan  <Streu@gmx.de>

	* main.c (InitPHOSTLib): changed banner

	* ex9.c: small fixes

Tue Dec  3 22:05:51 2002  Stefan  <Streu@gmx.de>

	* ptscore.c: cosmetical fixes

	* vgapdat2.c (CreateShip): don't create ships >500 if not
 	configured to; initialize RC flags

	* pdk.texi: changed section headings so that Emacs'
	texinfo-update-node (C-c C-u C-n) works.

	* auxdata.c: fixed silly thinko
	(AssignDefaultForbidState): new function

Thu Nov 21 23:24:14 2002  Stefan  <Streu@gmx.de>

	* hostio.c: support PHost 4.0 / THost handling of nextturn.hst

	* pconfig.c: merged in changes from PHost 3.4c / 4.0

	* auxdata.c: PHost 4.x auxdata format

	* vgapdat2.c: 999 ship support, sort of

Wed May  1 14:56:25 2002  Stefan  <Streu@gmx.de>

	* commands.c: new

	* pconfig.c: new config reader from PHost 3.4
