@@ -1,3 +1,8 @@
+Thu Aug 28 19:46 2003  Piotr
+
+	* vgapdat4.c (PutMinefieldPositionX, PutMinefieldPositionY, PutMinefieldWeb):
+ 	added these functions (Piotr Winiarczyk)
+
 Sat May 10 21:09:07 2003  Stefan  <Streu@gmx.de>
 
 	* pconfig.c (Read_HConfig_File): removed bogus 'fclose'
